[package]
name = "voice-engine"
version = "0.1.0"
license = "MIT"
authors = ["Justice Almanzar <superdash993@gmail.com>"]
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
segfault = "0.1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
